# booking

./: CMakeLists.txt  README.md  hash_password  hash_password.cpp  test_hash  test_hash.cpp  test_login.sh  users.csv  users.json
archive/old_architecture/: ChatUI.cpp  ChatUI.h  CommandParser.cpp  CommandParser.h  Event.h  MessageHandler.cpp  MessageHandler.h  ServerConnection.cpp  ServerConnection.h  client.cpp
config/: auth_config.json  client_config.json  server_config.json
docs/: ARCHITECTURE.md  ARCHITECTURE_REDESIGN.md  MIGRATION_COMPLETE.md  NETWORK_PROTOCOL.md  SERVER_UPDATES.md  THREADING_FIXES.md  spec.md
include/: ApplicationManager.h  ApplicationState.h  ChatRoom.h  ClientManager.h  NetworkManager.h  RoomInfo.h  ThreadSafeQueue.h  UICommand.h  UIManager.h
lib/auth/: CMakeLists.txt  README.md
lib/auth/include/auth/: AuthClient.h  AuthManager.h  AuthServer.h  AuthToken.h  FileUserRepository.h  IUserRepository.h  InMemoryUserRepository.h
lib/auth/src/: AuthClient.cpp  AuthManager.cpp  AuthServer.cpp  FileUserRepository.cpp  InMemoryUserRepository.cpp
lib/common/: CMakeLists.txt
lib/common/include/common/: NetworkMessage.h
lib/ui/: CMakeLists.txt  README.md
lib/ui/include/ui/: Label.h  ListBox.h  Menu.h  MessageBox.h  PasswordInput.h  TextInput.h  Types.h  Widget.h  Window.h
lib/ui/src/: Label.cpp  ListBox.cpp  Menu.cpp  MessageBox.cpp  PasswordInput.cpp  TextInput.cpp  Widget.cpp  Window.cpp
src/: ChatRoom.cpp  ChatUI.cpp  ChatUI.h  ClientManager.cpp  ClientManager.h  ServerConnection.cpp  ServerConnection.h  ServerSocket.cpp  ServerSocket.h  auth_server.cpp  client.cpp  server.cpp
src/client/: ApplicationManager.cpp  ApplicationState.cpp  NetworkManager.cpp  UIManager.cpp  client.cpp
src/server/: ChatRoom.cpp  ClientManager.cpp  server.cpp
tests/: ApplicationManagerTest.cpp  NetworkManagerTest.cpp  ThreadSafeQueueTest.cpp  test_multi_client.sh  test_new_client.sh
